@@ -1,4 +1,5 @@
 0.02
+ - Add ERRORS section to doc.
  - Fix copyright years.
  - Fix minimal dependency to Plack::Component::Tags::HTML.
 
